projects/09-kubernetes-networking-security/k8s/authorized-client.yaml
apiVersion: v1

kind: Pod 

metadata:
  name: authorized-client
  namespace: web
  labels:
    role: test-client
    access: backend

spec:
  containers:
    - name: client
      image: busybox:1.36
      command:
        - sleep
        - "7200"

      resources:
        requests:
          memory: "32Mi"
          cpu: "50m"
        limits:
          memory: "128Mi"
          cpu: "200m"

  restartPolicy: Never
