projects/09-kubernetes-networking-security/k8s/backend-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: backend
  namespace: api

spec:
  selector:
    app: backend

  type: ClusterIP

  ports:
  - port: 80
    targetPort: 3000
