projects/09-kubernetes-networking-security/k8s/authorized-client-egress.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:
  name: authorized-client-egress
  namespace: web

spec:
  podSelector:
    matchLabels:
      access: backend

  policyTypes:
    - Egress

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns

      ports: 
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: api
          podSelector:
            matchLabels:
              app: backend

      ports:
        - protocol: TCP
          port: 3000
